apps/ollama/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
  namespace: ollama
spec:
  ingressClassName: traefik
  rules:
    - host: ollama.torsteinbo.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ollama
                port:
                  number: 11434
